fix: Dark mode .content → .content-body selector mismatch

--- a/_sass/workshop-theme/_dark-mode.scss
+++ b/_sass/workshop-theme/_dark-mode.scss
@@ -12,7 +12,7 @@
   }
 
   // Image brightness reduction
-  .content img {
+  .content-body img {
     opacity: 0.9;
 
     &:hover {
